controller/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
spec:
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      serviceAccountName: controller
      containers:
      - name: controller
        image: ghcr.io/runitkr/controller:latest
