controller/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller
  namespace: controller
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - run.it.kr
    secretName: controller-ingress-tls
  rules:
  - host: run.it.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controller
            port:
              number: 8080
